# dotfiles

./: .coveragerc  .gitignore  .gitmodules  .mdl_style.rb  .pre-commit-config.yaml  .prettierrc  .pylintrc  .zshrc  README.md  pip_compile.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup  test.sh  tox.ini  util.py
.github/: dependabot.yml
.github/workflows/: python.yml  python_3_10.yml
dotfiles/: __init__.py  constants.py  copier.py  exceptions.py  models.py  symlinker.py
files/: .bash_profile  .bashrc  .gitconfig  .huskyrc  .mrlonis_after_setup.sh  .profile  .zprofile  .zshenv  .zshrc  git_pull_all.sh  requirements.in  requirements.txt  vscode.settings.json  wsl.gitconfig
files/.aws/: credentials
tests/: __init__.py  test_copier.py  test_symlinker.py
