[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Matthew Lonis <mattlonis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.1"
pydantic = { version = "^2.11.7", extras = ["dotenv"] }

[tool.poetry.group.test.dependencies]
flake8 = "^7.3.0"
greenlet = "^3.2.4"
mypy = "^1.18.2"
pylint = "^3.3.8"
pylint-junit = "^0.3.5"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-xdist = { version = "^3.8.0", extras = ["psutil"] }
tomli = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
configupdater = "^3.1.1"
isort = "^6.0.1"
pre-commit = "^4.3.0"
ruamel-yaml = "^0.18.15"
tomlkit = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
addopts = "--ignore=./utility-repo-scripts"
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
