[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Matthew Lonis <mattlonis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.1"
pydantic = { version = "^2.12.5", extras = ["dotenv"] }

[tool.poetry.group.test.dependencies]
flake8 = "^7.3.0"
greenlet = "^3.3.1"
mypy = "^1.19.1"
pylint = "^4.0.4"
pylint-junit = "^0.3.5"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-xdist = { version = "^3.8.0", extras = ["psutil"] }
tomli = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
configupdater = "^3.1.1"
isort = "^7.0.0"
pre-commit = "^4.5.1"
ruamel-yaml = "^0.19.1"
tomlkit = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
addopts = "--ignore=./utility-repo-scripts"
log_cli = false
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
